maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:18: error: ':' expected but ')' found.
def keepHandOnSideWall(count){
                            ^PledgeMaze:49: error: identifier expected but '}' found.
}
^